feat: add MaxConnections field to LimitationData and update related templates

--- a/web/static/preview.html
+++ b/web/static/preview.html
@@ -196,6 +196,10 @@
               <span>65536 chars</span>
             </div>
             <div class="limitation-item">
+              <label>Max Connections</label>
+              <span>1000</span>
+            </div>
+            <div class="limitation-item">
               <label>Max Subscriptions</label>
               <span>20</span>
             </div>
